@@ -4,11 +4,9 @@ import static org.hamcrest.MatcherAssert.assertThat;
 
 import static edu.umd.cs.findbugs.test.CountMatcher.containsExactly;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.DisabledOnJre;
-import org.junit.jupiter.api.condition.JRE;
 import org.junit.jupiter.api.extension.ExtendWith;
 
 import edu.umd.cs.findbugs.BugCollection;
@@ -25,12 +23,11 @@ class IncorrectSelfComparisonInstanceOfPatternMatchingTest {
      *      issue</a>
      */
     @Test
-    @DisabledOnJre({ JRE.JAVA_8, JRE.JAVA_11 })
     void testIssue1136(SpotBugsRunner spotbugs) {
         final BugInstanceMatcher selfComparisonMatcher = new BugInstanceMatcherBuilder()
                 .bugType("SA_LOCAL_SELF_COMPARISON").build();
 
-        BugCollection bugCollection = spotbugs.performAnalysis(Paths.get(
+        BugCollection bugCollection = spotbugs.performAnalysis(Path.of(
                 "../spotbugsTestCases/build/classes/java/java17/IncorrectSelfComparisonInstanceOfPatternMatching.class"));
         assertThat(bugCollection, containsExactly(0, selfComparisonMatcher));
     }
