@@ -3,10 +3,11 @@ package edu.umd.cs.findbugs.nullness;
 import edu.umd.cs.findbugs.BugCollection;
 import edu.umd.cs.findbugs.test.SpotBugsExtension;
 import edu.umd.cs.findbugs.test.SpotBugsRunner;
+
+import java.nio.file.Path;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-
-import java.nio.file.Paths;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.emptyIterable;
@@ -20,7 +21,7 @@ class Issue1338Test {
     @Test
     void testIssue(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/ghIssues/Issue1338.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/ghIssues/Issue1338.class"));
         assertThat(bugCollection, emptyIterable());
     }
 }
