@@ -6,13 +6,12 @@ import java.io.FilenameFilter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import edu.umd.cs.findbugs.annotations.ExpectWarning;
 
 public class TestNullReturnsInJdk {
 
-    private static final Path PATH = Paths.get("");
+    private static final Path PATH = Path.of("");
     private static final File FILE = PATH.toFile();
 
     @ExpectWarning("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
